--- a/heatmap/templates/index.html
+++ b/heatmap/templates/index.html
@@ -8,19 +8,37 @@
 
     <body>
         <!-- <p>Hopefully something is working.</p> -->
+        <script type="text/javascript">
+            function jsFunction(value)
+            {
+                alert(value);
+            }            
+        </script>
+
+        <div align="center">
+            <select name="Type of Disease" onchange="UpdateMap(this.value)">
+                <option value="small">Small</option>
+                <option value="large">Large</option>                
+            </select>
+        </div>
+
         <div id="mapContainer"></div>
 
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAuj10RU8Pl26mGSwt0ZVI9x2Hm4M2lZcc&libraries=visualization"></script>
-        <script src="{{ url_for('static', filename='js/heatmap_es5.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/heatmap_es5.js') }}"></script>        
         <script>
-        generateMap('api/v1/small',
-                    'mapContainer', 
-                    {lat: 60.18, lng: 24.82},
-                    false, // isPolitical
-                    true, // showEvents
-                    false, // showLeads
-                    true // showHeatmap
-                    )
+            function UpdateMap(value)
+            {
+                generateMap('api/v1/' + value,
+                        'mapContainer', 
+                        {lat: 60.18, lng: 24.82},
+                        false, // isPolitical
+                        true, // showEvents
+                        true, // showLeads
+                        true // showHeatmap
+                        )
+            } 
+            
         </script>
     </body>
 
